@@ -1,4 +1,9 @@
-﻿shmuel 25.09.2016 21:29:41 +0200 - build 585
+﻿shmuel 29.09.2016 18:57:45 +0200 - build 586
+
+1. LuaFAR: улучшено сообщение об ошибке при передаче аргумента - несуществующего флага типа string.
+   Сообщение теперь включает в себя переданный флаг.
+
+shmuel 25.09.2016 21:29:41 +0200 - build 585
 
 1. Продолжение 584: заменяем в traceback табы тремя пробелами - для лучшего восприятия.
 
